--- a/src/App.css
+++ b/src/App.css
@@ -23,4 +23,14 @@ font-weight: 600; */
 
 .App {
   display: flex;
+  background-color: rgba(247, 248, 250, 1);
+
+}
+
+#header-flag {
+  position: fixed;
+  z-index: 5;
+  display: flex;
+  width: 100%;
+  height: 6px;
 }
