--- a/src/Styles/SettingsUsers.css
+++ b/src/Styles/SettingsUsers.css
@@ -12,9 +12,10 @@
 #settings-users #header-users > h1 {
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 30px;
     line-height: 23px;
     color: #241B3D;
+    margin-top: 15px;
 }
 
 #settings-users #header-users button {
