--- a/src/Styles/CreateVisit.css
+++ b/src/Styles/CreateVisit.css
@@ -1,5 +1,8 @@
 #CreateForm {
-    margin: 50px 48px;
+    margin: 0 48px 50px 48px;
+    padding: 40px;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.12);
+    background-color: white;
 }
 
 #CreateForm h2 {
@@ -135,6 +138,13 @@
     color: #FFFFFF;
     cursor: pointer;
     animation: opacity 0.2s ease-out;
+}
+
+#form-header {
+    background-color: teal;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 @keyframes opacity {
