--- a/src/Styles/SettingsCatCont.css
+++ b/src/Styles/SettingsCatCont.css
@@ -1,4 +1,4 @@
-#settings-cat-cont {
+#item-collection-container {
   margin: 50px 48px;
 }
 
@@ -10,11 +10,11 @@
 }
 
 #header-cat-cont > p {
-  text-transform: uppercase;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 20px;
   line-height: 23px;
-  color: #241b3d;
+  text-transform: uppercase;
+  color: #241B3D;
   margin-top: 10px;
 }
 
@@ -23,12 +23,10 @@
   align-items: center;
   justify-content: center;
   padding: 12px 16px;
-  background-color: rgba(113, 78, 215, 0.2);
+  background-color: rgba(113, 78, 215, 0.06);
   border-radius: 8px;
   border: none;
   cursor: pointer;
-  width: 45%;
-  height: 50px;
 }
 
 #header-cat-cont div:focus {
@@ -39,7 +37,13 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 22px;
-  color: #ffffff;
   margin-left: 10px;
-  color: rgba(113, 78, 215, 1);
+  color: #5B3FAD;
 }
+
+.dashboard-cat-cont {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 16px;
+}
+
