--- a/src/Styles/SettingsUsers.css
+++ b/src/Styles/SettingsUsers.css
@@ -39,3 +39,9 @@
     color: #FFFFFF;
     margin-left: 10px;
 }
+
+@media (max-width: 1024px) {
+    #settings-users{
+        margin: 100px 48px;
+    }
+}
