--- a/src/Styles/NavDashboard.css
+++ b/src/Styles/NavDashboard.css
@@ -60,6 +60,7 @@
         margin: 0;
         width: 100%;
         padding: 20px;
+        border-radius: 0;
     }
 
     #DashboardNavBar img.logo {
