--- a/src/Styles/SettingsCatCont.css
+++ b/src/Styles/SettingsCatCont.css
@@ -22,7 +22,7 @@
   align-items: center;
   justify-content: center;
   padding: 12px 16px;
-  background-color: rgba(113, 78, 215, 0.06);
+  background-color: rgba(113, 78, 215, 1);
   border-radius: 8px;
   border: none;
   cursor: pointer;
@@ -37,7 +37,7 @@
   font-size: 16px;
   line-height: 22px;
   margin-left: 10px;
-  color: #5B3FAD;
+  color: white;
 }
 
 .dashboard-cat-cont {
