--- a/src/Styles/FormCreateCatCont.css
+++ b/src/Styles/FormCreateCatCont.css
@@ -32,6 +32,10 @@
     border-radius: 8px;
     padding: 12px 16px;
     cursor: pointer;
+    color: #5B3FAD;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .FormCreateUpdateContact h1 {
