--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,12 @@ font-weight: 500;
 font-weight: 600; */
 
 :root {
-  --red-flag: rgb(255, 176, 176);
-  --orange-flag: rgb(250, 198, 150);
-  --yellow-flag: rgb(247, 230, 143);
-  --green-flag: rgb(167, 242, 165);
-  --blue-flag: rgb(150, 242, 239);
-  --purple-flag: rgb(181, 200, 255);
+  --red-flag: #ffb0b0;
+  --orange-flag: #fac696;
+  --yellow-flag: #f7e68f;
+  --green-flag: #a7f2a5;
+  --blue-flag: #96f2ef;
+  --purple-flag: #b5c8ff;
 }
 
 * {
