--- a/src/Styles/DataViz.css
+++ b/src/Styles/DataViz.css
@@ -14,6 +14,7 @@
 .Graph-header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     position: relative;
     margin-bottom: 16px;
 } 
@@ -26,24 +27,45 @@
     color: #241B3D;
 }
 
+.filter-container p {
+    padding: 12px 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: #423566;
+    cursor: pointer;
+    user-select:none;
+}
+
+.selected-filter {
+    background-color: rgba(113, 78, 215, 0.06);
+    border-radius: 4px;
+    color: #714ED7;
+}
+
+.small-calendar {
+    position: absolute;
+    top: 50px;
+    right: 0;
+    z-index: 3;
+}
+
 .bottom-container {
     position: absolute;
     top: 55%;
+    width: calc(100% - 80px);
 }
 
 .bottom-container .total {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    text-transform: uppercase;
+    color: #423566;
 }
 
-.total p {
-    background-color: turquoise;
-}
 
-.small-calendar {
-    position: absolute;
-    top: 30px;
-    right: 0;
-    z-index: 3;
-}
+
