--- a/src/Styles/NavDashboard.css
+++ b/src/Styles/NavDashboard.css
@@ -1,4 +1,6 @@
 #DashboardNavBar {
+    display: flex;
+    flex-direction: column;
     position: sticky;
     top: 24px;
     width: 294px;
@@ -10,12 +12,11 @@
 }
 
 #DashboardNavBar img.logo {
-    padding-left: 38px;
+    padding: 0 38px;
     margin: 64px 0;
 }
 
 #DashboardNavBar .link {
-    display: block;
     text-decoration: none;
     font-weight: 500;
     font-size: 18px;
@@ -27,6 +28,70 @@
 #DashboardNavBar .link:hover, .selected {
     background-color: rgba(113, 78, 215, 0.06);
     border-right: 2px solid rgba(65, 44, 122, 1);
+}
+
+.rapport {
+    position: relative;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 24px;
+    color: #241B3D;
+    padding: 18px 42px;
+    cursor: pointer;
+}
+
+.rapport p {
+    font-weight: 500;
+}
+
+
+.rapport:hover {
+    background-color: rgba(113, 78, 215, 0.06);
+}
+
+.rapport img {
+    position: absolute;
+    top: 50%;
+    right: 21px;
+    transform: translateY(-50%);
+}
+
+.drop-down-rapport {
+    display: flex;
+    flex-direction: column;
+    height: 160px;
+    animation: open 0.15s ease-out
+}
+
+@keyframes open {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 160px;
+    }
+}
+
+.drop-down-rapport .sublink {
+    padding: 12px 0 12px 42px;
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 24px;
+    color: #423566;
+    animation: openOpacity 0.3s ease-out
+}
+
+@keyframes openOpacity {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.drop-down-rapport .sublink:last-child {
+    margin-bottom: 16px;
 }
 
 .logout {
@@ -51,16 +116,57 @@
 
 @media (max-width: 1024px) {
     #DashboardNavBar {
-        display: flex;
+        flex-direction: row;
         position: fixed;
         align-items: center;
         top: 0;
         z-index: 3;
         height: 60px;
         margin: 0;
+        margin-top: 6px;
         width: 100%;
         padding: 20px;
         border-radius: 0;
+    }
+
+    .rapport-container {
+        position: relative;
+
+    }
+
+    .rapport {
+        display: flex;
+        justify-content: space-between;
+        max-height: 60px;
+    }
+
+    .rapport img {
+        position: relative;
+        top: 0;
+        right: 0;
+        margin-left: 15px;
+        min-height: 8px;
+    }
+
+    .drop-down-rapport {
+        height: 132px;
+        min-width: 170px;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background-color: white;
+        box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.12);
+        border-radius: 8px;
+    }
+
+    .drop-down-rapport .sublink {
+        padding: 12px 8px;
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    .drop-down-rapport .sublink:last-child {
+        margin: 0;
     }
 
     #DashboardNavBar img.logo {
@@ -82,8 +188,8 @@
         display: none;
     }
 
-    #DashboardNavBar .link {
-        display: block;
+    #DashboardNavBar .link, #DashboardNavBar .rapport {
+        /* display: block; */
         font-size: 15px;
         line-height: 0;
         padding: 28.5px 15px;
