--- a/src/Styles/DataViz.css
+++ b/src/Styles/DataViz.css
@@ -52,7 +52,7 @@
 
 .bottom-container {
     position: absolute;
-    top: 55%;
+    top: 56%;
     width: calc(100% - 80px);
 }
 
@@ -65,6 +65,7 @@
     line-height: 23px;
     text-transform: uppercase;
     color: #423566;
+    margin-bottom: 20px;
 }
 
 
