--- a/src/Styles/CardAdminsVolunteer.css
+++ b/src/Styles/CardAdminsVolunteer.css
@@ -57,3 +57,22 @@
     box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.14);
     border-radius: 4px;
 }
+
+@media (max-width: 700px) {
+    .CardContainerAdminsVolunteer {
+        padding: 8px;
+        width: 100%;
+    }
+
+    .CardContainerAdminsVolunteer:nth-child(2n) {
+        margin-left: 0;
+    }
+
+    .card-info-admins-volunteer div {
+        padding: 3px 6px;
+        font-size: 12px;
+        line-height: 16px;
+    }
+    
+}
+
