--- a/src/Styles/History.css
+++ b/src/Styles/History.css
@@ -48,3 +48,18 @@
         margin: 100px 48px;
     }
 }
+
+@media (max-width: 700px) {
+    #History {
+        margin: 40px 10px;
+    }
+
+    #History #header {
+        flex-direction: column;
+        margin-bottom: 40px;
+    }
+
+    #History #header > p {
+        margin-bottom: 20px;
+    }
+}
