--- a/src/Styles/SettingsCatCont.css
+++ b/src/Styles/SettingsCatCont.css
@@ -52,3 +52,17 @@
   }
 }
 
+@media (max-width: 700px) {
+  #item-collection-container {
+    margin: 40px 10px;
+  }
+
+  #header-cat-cont {
+    flex-direction: column;
+  }
+
+  #header-cat-cont > p {
+    margin-bottom: 20px;
+  }
+}
+
