--- a/src/Styles/SettingsUsers.css
+++ b/src/Styles/SettingsUsers.css
@@ -51,3 +51,20 @@
         margin: 100px 48px;
     }
 }
+
+@media (max-width: 700px) {
+    #settings-users{
+        margin: 40px 10px;
+    }
+
+    #settings-users #header-users{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 40px;
+    }
+
+    #settings-users #header-users > h1 {
+        margin-bottom: 20px;
+    }
+}
