--- a/src/Styles/VisitCardInfo.css
+++ b/src/Styles/VisitCardInfo.css
@@ -52,3 +52,15 @@
     box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.14);
     border-radius: 4px;
 }
+
+@media (max-width: 700px) {
+    .CardContainer {
+        padding: 10px;
+    }
+
+    .card-info div {
+        padding: 3px 6px;
+        font-weight: 400;
+        font-size: 11px;
+    }
+}
