error message styling done + small ux twicks

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ font-weight: 600; */
   font-weight: 400;
 }
 
+input:focus, button:focus {
+  outline: none;
+}
+
 #header-flag {
   position: fixed;
   z-index: 5;
