--- a/src/Styles/LogIn.css
+++ b/src/Styles/LogIn.css
@@ -111,6 +111,7 @@
 
 .form-signin {
     max-width: 415px;
+    position: relative;
 }
 
 .form-signin label, .form-signin input {
@@ -156,4 +157,20 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 22px;
+}
+
+.form-signin button:focus {
+    outline: none;
+}
+
+.error-message {
+    font-size: 16px;
+    line-height: 24px;
+    color: #E65353;
+    position: absolute;
+    bottom: 60px;
+}
+
+#error-input {
+    border: 1px solid #E65353;
 }
