--- a/src/Styles/NavDashboard.css
+++ b/src/Styles/NavDashboard.css
@@ -13,7 +13,7 @@
 
 #DashboardNavBar img.logo {
     padding: 0 38px;
-    margin: 64px 0;
+    margin: 56px 0;
 }
 
 #DashboardNavBar .link {
@@ -33,17 +33,15 @@
 .rapport {
     position: relative;
     text-decoration: none;
-    font-size: 18px;
-    line-height: 24px;
-    color: #241B3D;
     padding: 18px 42px;
     cursor: pointer;
 }
 
 .rapport p {
     font-weight: 500;
+    font-size: 18px;
+    color: #241B3D;
 }
-
 
 .rapport:hover {
     background-color: rgba(113, 78, 215, 0.06);
@@ -60,7 +58,8 @@
     display: flex;
     flex-direction: column;
     height: 160px;
-    animation: open 0.15s ease-out
+    animation: open 0.15s ease-out;
+    margin-bottom: 16px;
 }
 
 @keyframes open {
@@ -73,7 +72,7 @@
 }
 
 .drop-down-rapport .sublink {
-    padding: 12px 0 12px 42px;
+    padding: 8px 0 8px 42px;
     text-decoration: none;
     font-size: 16px;
     line-height: 24px;
@@ -88,10 +87,6 @@
     100% {
         opacity: 1;
     }
-}
-
-.drop-down-rapport .sublink:last-child {
-    margin-bottom: 16px;
 }
 
 .logout {
@@ -139,17 +134,22 @@
         justify-content: space-between;
         max-height: 60px;
     }
+    
+    .rapport p {
+        font-size: 15px;
+        transform: translateY(1px);
+    }
 
     .rapport img {
         position: relative;
-        top: 0;
+        top: 2px;
         right: 0;
         margin-left: 15px;
         min-height: 8px;
     }
 
     .drop-down-rapport {
-        height: 132px;
+        height: 178px;
         min-width: 170px;
         position: absolute;
         top: 60px;
@@ -157,6 +157,7 @@
         background-color: white;
         box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.12);
         border-radius: 8px;
+        overflow: hidden;
     }
 
     .drop-down-rapport .sublink {
@@ -177,11 +178,15 @@
     }
 
     .logout {
-        position: relative;
-        top: 0px;
-        left: 20px;
+        position: absolute;
+        right: 0;
         cursor: pointer;
-        max-width: 150px;
+    }
+
+    .logout img {
+        position: absolute;
+        right: 18px;
+        bottom: -4px;
     }
 
     .logout p {
@@ -218,24 +223,35 @@
         padding: 15px;
     }
 
+    .rapport p {
+        font-size: 13px;
+    }
+
+    .rapport img {
+        display: none;
+    }
+
     #DashboardNavBar .rapport {
         font-size: 13px;
         padding: 15px;
     }
 
     .drop-down-rapport {
-        height: 132px;
+        height: 178px;
         min-width: 170px;
-        top: 20px;
-        right: 50%;
+        top: 30px;
+        left: 0;
+    }
+
+    .logout {
+        position: relative;
     }
 
     .logout img {
-        top: 0;
+        top: 25px;
+        right: 40px;
         margin: 0;
         z-index: -1;
-        margin-top: 15px;
-        margin-right: 44px;
         width: 12px;
     }
 
