--- a/src/Styles/CreateVisit.css
+++ b/src/Styles/CreateVisit.css
@@ -63,6 +63,30 @@
     flex-wrap: wrap;
 }
 
+.cat-cont-container textarea {
+    background: #FFFFFF;
+    border: 1px solid rgba(113, 78, 215, 0.24);
+    border-radius: 8px;
+    padding: 16px 19px;
+    width: 100%;
+    margin-bottom: 40px;
+    max-height: 60px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: #5B3FAD;;
+}
+
+.cat-cont-container textarea:focus {
+    border: 2px solid #714ED7;
+    outline: none;
+}
+
+.cat-cont-container .textarea-filled {
+    border: 2px solid #714ED7;
+    background-color: rgba(113, 78, 215, 0.06);
+}
+
 .cat-cont-card {
     width: 49.5%;
     margin-bottom: 8px;
